samples/_failures_safe/1761127874_cad946_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_06637e0c.c: In function ‘main’:
./samples/SAFE/__tmp_06637e0c.c:187: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_06637e0c.c:186:5: error: expected declaration or statement at end of input
  186 |     for
      |     ^~~
